intel/bench_214/extr_.labenginecodeclientsnd_mix.c_S_PaintChannelFrom16_scalar_with_main/log.txt
bench_214/extr_.labenginecodeclientsnd_mix.c_S_PaintChannelFrom16_scalar_with_main/extr_.labenginecodeclientsnd_mix.c_S_PaintChannelFrom16_scalar_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
1 error generated.
HLS FPGA Parse FAILED.
